--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ html, body {
   max-width: 100%;
 }
 .social a{
-  font-size:4.5em;
+  font-size: :4.5em;
   padding: 3rem;
 
 }
@@ -142,7 +142,7 @@ footer{
   padding-top: 2rem;
 }
 hr.light{
-
+ color:#3f3f3f;
 }
 /*---Media Queries --*/
 @media (max-width: 992px) {
