--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html, body {
 
 
 .navbar{
+  margin-bottom: 0px;
   padding: .8rem;
 }
 
@@ -154,13 +155,7 @@ hr.light{
 @media (max-width: 576px) {
   
 }
-/* Related simple non-responsive mixins*/
-.element {
-  @include float-left;
-}
-.another-element {
-  @include float-right;
-}
+
 
 /*---Firefox Bug Fix --*/
 .carousel-item {
