--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -1,6 +1,7 @@
 body{
     background-image: url("../img/navalband1.jpg");
     background-size: cover;
+    background-repeat: no-repeat;
 }
 hr{
     background: white;
