--- a/css/style_schedule.css
+++ b/css/style_schedule.css
@@ -32,3 +32,23 @@ section .section-title {
     color: #eee;
     font-size: 20px;
 }
+.header {
+    padding: 10px 16px;
+    background: #555;
+    color: #f1f1f1;
+  }
+  
+  .content {
+    padding: 16px;
+  }
+  
+  .sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  .sticky + .content {
+    padding-top: 102px;
+  }
+  
