--- a/css/style_schedule.css
+++ b/css/style_schedule.css
@@ -33,7 +33,7 @@ section .section-title {
     font-size: 20px;
 }
 .header {
-    padding: 10px 16px;
+    /*padding: 10px 16px;*/
     background: #555;
     color: #f1f1f1;
   }
