--- a/css/style_schedule.css
+++ b/css/style_schedule.css
@@ -5,7 +5,7 @@ section {
 
 section .section-title {
     text-align: center;
-    color: #DCDCDC;
+    color: #000000;
     margin-bottom: 50px;
     text-transform: uppercase;
 }
@@ -29,7 +29,7 @@ section .section-title {
     border: 1px solid transparent;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
-    color: #eee;
+    color: #000000;
     font-size: 20px;
 }
 
