--- a/css/style_orgchart.css
+++ b/css/style_orgchart.css
@@ -30,7 +30,7 @@
 }
 .tree li::after{
 	right: auto; left: 50%;
-	border-left: 1px solid #ccc;
+	border-left: 1px solid #000000;
 }
 
 /*We need to remove left-right connectors from elements without 
@@ -49,7 +49,7 @@ right connector from last child*/
 }
 /*Adding back the vertical connector to the last nodes*/
 .tree li:last-child::before{
-	border-right: 1px solid #ccc;
+	border-right: 1px solid #000000;
 	border-radius: 0 5px 0 0;
 	-webkit-border-radius: 0 5px 0 0;
 	-moz-border-radius: 0 5px 0 0;
