--- a/css/style_orgchart.css
+++ b/css/style_orgchart.css
@@ -64,12 +64,12 @@ right connector from last child*/
 .tree ul ul::before{
 	content: '';
 	position: absolute; top: 0; left: 50%;
-	border-left: 1px solid #ccc;
+	border-left: 1px solid #000000;
 	width: 0; height: 20px;
 }
 
 .tree li a{
-	border: 1px solid #ccc;
+	border: 1px solid #000000;
 	padding: 5px 10px;
 	text-decoration: none;
 	color: #666;
