--- a/css/style_faq.css
+++ b/css/style_faq.css
@@ -2,7 +2,7 @@
             list-style-type: none;}
 
 .faq li.q {
-  background: #4FC2EF;
+  background: #4FC2E;
   font-weight: bold;
   font-size: 120%;
   border-bottom: 1px #ddd solid;
